--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,6 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Magnolia International
+  position: Documentation Manager
+  duration: Oct, 20200 &mdash; Present
+  summary: <p>I manage a small team of technical writers as part of Product Development for Magnolia. This includes working with stakeholders across multiple departments including, developers, product managers, engineering managers, SRE/DevOps as well as marketing and other more customer-facing positions.</p> <p>Other core responsibilities include:</p><ul><li>Building and managing the docs pipeline.</li><li>Writing and maintaining developer contribution guidelines.</li><li>Writing scripts for the documentation site.</li><li>Writing and editing content in-app as well as in repos (asciidoc) where content is fetched by the site at build time.</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
