--- a/_data/education.yml
+++ b/_data/education.yml
@@ -18,4 +18,4 @@
   year: 2005 &mdash; 2009
   awards:
     - award: '3.4'
-  summary: Focused on philology, economics, abd rhetorical theory
+  summary: Focused on philology, economics, and rhetorical theory
