--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,6 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Serious thumb war battles with my daughter
+- description: Hillwalking and hiking
+- description: Fishing
+- description: Kayaking
+- description: Reading
