--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,13 @@
 # Projects
-# uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+- project: Native Woodland Trust
+  role: Volunteer
+  duration: 2013 &mdash; present
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  description: I assist on projects mainly on preserving riparian zones and planting native trees.
 
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+- project: Debezium
+  role: Technical Writing contributor
+  duration: 2018
   # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+  description: I helped write the SQL connector documentation while working on open source projects with Red Hat.
