--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,11 +1,11 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Technical Writing * DocOps
+  description: I have been a technical writer for over 10 years. I specialise in migrations, setting up documentation sites and pipelines, and increasing developer contributions. 
 
 # Communications strategy
 - skill: Communications strategy
-  description: Content and marketing strategy,
+  description: Content and marketing strategy.
 
 # Digital content development and creation
 - skill: Digital content development and creation
