--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,25 @@
 # Jobs
 - company: Magnolia International
   position: Documentation Manager
-  duration: Oct, 20200 &mdash; Present
+  duration: Jan, 2022 &mdash; Present
   summary: <p>I manage a small team of technical writers as part of Product Development for Magnolia. This includes working with stakeholders across multiple departments including, developers, product managers, engineering managers, SRE/DevOps as well as marketing and other more customer-facing positions.</p> <p>Other core responsibilities include:</p><ul><li>Building and managing the docs pipeline.</li><li>Writing and maintaining developer contribution guidelines.</li><li>Writing scripts for the documentation site.</li><li>Writing and editing content in-app as well as in repos (asciidoc) where content is fetched by the site at build time.</li></ul>
 
+- company: Magnolia International
+  position: Technical Writer
+  duration: July, 2020 &mdash; Jan, 2022
+  summary: test
+
+- company: Tango Telecom (now CSG)
+  position: Lead Technical Writer
+  duration: July, 2016 &mdash; July, 2020
+  summary: test
+
+- company: Education First
+  position: Regional Academic Coordinator
+  duration: April, 2015 &mdash; May, 2016
+  summary: test
+
+- company: iQuate
+  position: Technical Writer
+  duration: April, 2014 &mdash; April, 2015
+  summary: test
