--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,6 +2,7 @@
 - degree: Postgraduate Diploma of Science, Geospatial Sciences
   uni: Ulster University
   year: 2017 &mdash; 2018
+  url: https://www.ulster.ac.uk/
   awards:
     - award: 'Distinction'
   summary: Focused on satellite imagery and geo-data analysis; secondary focus was in biodiversity management plans
@@ -9,6 +10,7 @@
 - degree: Postgraduate Certificate of Science, Environmental Science
   uni: University College Dublin
   year: 2015 &mdash; 2016
+  url: https://www.ucd.ie/
   awards:
     - award: '3.8'
   summary: Focused on environmental genetics and freshwater ecology
@@ -16,6 +18,7 @@
 - degree: Bachelor of Arts, German
   uni: Auburn University
   year: 2005 &mdash; 2009
+  url: https://auburn.edu/
   awards:
     - award: '3.4'
   summary: Focused on philology, economics, and rhetorical theory
