--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,24 +1,32 @@
 # Degree
-- degree: Postgraduate Diploma of Science, Geospatial Sciences
+- degree: Postgraduate Diploma of Science, Geospatial Sciences <span>&#x2713;</span>
   uni: Ulster University
   year: 2017 &mdash; 2018
   url: https://www.ulster.ac.uk/
   awards:
     - award: 'Distinction'
-  summary: Focused on satellite imagery and geo-data analysis; secondary focus was in biodiversity management plans
+  summary: Satellite imagery and geospatial analysis; secondary focus in biodiversity management plans
 
-- degree: Postgraduate Certificate of Science, Environmental Science
+- degree: Postgraduate Certificate of Science, Environmental Science <span>&#x2713;</span>
   uni: University College Dublin
   year: 2015 &mdash; 2016
   url: https://www.ucd.ie/
   awards:
     - award: '3.8'
-  summary: Focused on environmental genetics and freshwater ecology
+  summary: Environmental genetics and freshwater ecology
 
-- degree: Bachelor of Arts, German
+- degree: Master of Arts, Technical Communication
+  uni: Auburn University
+  year: 2009 &mdash; 2011
+  url: https://auburn.edu/
+  awards:
+    - award: '3.3 - non-thesis'
+  summary: Rhetorical theory, writing for engineers
+
+- degree: Bachelor of Arts, German <span>&#x2713;</span>
   uni: Auburn University
   year: 2005 &mdash; 2009
   url: https://auburn.edu/
   awards:
     - award: '3.4'
-  summary: Focused on philology, economics, and rhetorical theory
+  summary: Philology and economics
