--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -3,4 +3,4 @@
 - description: Hillwalking and hiking
 - description: Fishing
 - description: Kayaking
-- description: Reading
+- description: Artifact hunting
